--- a/package.json
+++ b/package.json
@@ -1,38 +1,79 @@
 {
-  "name": "dn-bridge",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "dn-bridge",
+    "version": "0.0.1",
+    "author": "Marece Williams",
+    "description": "React and Electron Awesome App",
+    "homepage": "./",
+    "main": "public/main.js",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.16.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "bootstrap": "^5.1.3",
+        "electron-updater": "^4.6.1",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.1.1",
+        "react-dom": "^17.0.2",
+        "react-scripts": "5.0.0",
+        "react-select": "^5.2.2",
+        "web-vitals": "^2.1.3"
+    },
+    "scripts": {
+        "dev": "nf start",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "electron": "electron .",
+        "install": "electron-rebuild",
+        "rebuild": "electron-rebuild -f -w serialport",
+        "package": "electron-builder build -c.extraMetadata.main=build/main.js --publish never",
+        "deploy": "electron-builder build -c.extraMetadata.main=build/main.js --publish always",
+        "backup": "git add . && git commit -m %NPM_PACKAGE_VERSION% && git push origin main",
+        "upload": "yarn build && yarn backup && yarn deploy ",
+        "try": "yarn build && yarn package ",
+        "refresh": "yarn upgrade --latest && yarn rebuild"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "electron": "^16.0.7",
+        "electron-builder": "^22.14.5",
+        "electron-rebuild": "^3.2.7",
+        "foreman": "^3.0.1"
+    },
+    "build": {
+        "productName": "Big D's Railroad",
+        "appId": "com.wbm.dcc",
+        "copyright": "WBM Tek",
+        "extends": null,
+        "npmRebuild": false,
+        "files": [
+            "build/**/*",
+            "electron/*"
+        ],
+        "extraResources": [
+            "public/locos/*"
+        ],
+        "win": {
+            "icon": "public/icon.ico"
+        }
+    }
 }
