--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
             "electron/*"
         ],
         "win": {
-            "icon": "public/favicon.ico"
+            "icon": "public/icon.ico"
         }
     },
     "repository": {
