--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dn-bridge",
-    "version": "0.0.7",
+    "version": "0.0.8",
     "author": "Marece Williams",
     "description": "React and Electron Awesome App",
     "homepage": "./",
@@ -73,6 +73,10 @@
             "build/**/*",
             "electron/*"
         ],
+        "mac": {
+            "gatekeeperAssess": "true",
+            "icon": "public/icon.icns"
+        },
         "win": {
             "icon": "public/icon.ico"
         }
