--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
         ],
         "mac": {
             "gatekeeperAssess": "true",
-            "icon": "public/icon.icns",
-            "dmg": {
-                "icon": "public/dmg.icns"
-            }
+            "icon": "public/icon.icns"
+        },
+        "dmg": {
+            "icon": "public/dmg.icns"
         },
         "win": {
             "icon": "public/icon.ico"
