--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dn-bridge",
-    "version": "0.1.1",
+    "version": "0.1.3",
     "author": "Marece Williams",
     "description": "React and Electron Awesome App",
     "homepage": "./",
@@ -59,9 +59,9 @@
         ]
     },
     "devDependencies": {
-        "electron-notarize": "^1.1.1",
         "electron": "^16.0.7",
-        "electron-builder": "^22.14.5",
+        "electron-builder": "22.14.13",
+        "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.7",
         "foreman": "^3.0.1"
     },
