--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dn-bridge",
-    "version": "0.1.10",
+    "version": "0.1.11",
     "author": "Marece Williams",
     "description": "React and Electron Awesome App",
     "homepage": "./",
@@ -59,8 +59,8 @@
         ]
     },
     "devDependencies": {
-        "electron": "^16.0.7",
-        "electron-builder": "22.14.13",
+        "electron": "^16.0.8",
+        "electron-builder": "^22.14.13",
         "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.7",
         "foreman": "^3.0.1"
