--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     },
     "devDependencies": {
         "electron": "^16.0.8",
-        "electron-builder": "^22.14.5",
+        "electron-builder": "22.14.5",
         "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.7",
         "foreman": "^3.0.1"
