--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "devDependencies": {
         "electron": "^16.0.8",
         "electron-builder": "22.13.1",
+        "electron-devtools-installer": "^3.2.0",
         "electron-notarize": "^1.1.1",
         "electron-rebuild": "^3.2.7",
         "foreman": "^3.0.1"
