--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "react-select": "^5.4.0",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^3.0.0-rc.0"
     },
     "scripts": {
         "dev": "nf start",
