--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "electron": "electron .",
-        "install": "electron-rebuild",
-        "rebuild": "electron-rebuild -f",
+        "postinstall": "electron-builder install-app-deps",
         "package": "electron-builder build -c.extraMetadata.main=build/main.js --publish never",
         "deploy": "electron-builder build -c.extraMetadata.main=build/main.js --publish always",
         "backup": "git add . && git commit -m %NPM_PACKAGE_VERSION% && git push origin main",
@@ -63,7 +62,6 @@
         "electron-builder": "23.3.3",
         "electron-devtools-installer": "^3.2.0",
         "electron-notarize": "^1.2.1",
-        "electron-rebuild": "^3.2.8",
         "foreman": "^3.0.1"
     },
     "build": {
