--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "react-select": "^5.4.0",
-        "web-vitals": "^3.0.0-rc.0"
+        "web-vitals": "^3.0.0"
     },
     "scripts": {
         "dev": "nf start",
@@ -58,7 +58,7 @@
         ]
     },
     "devDependencies": {
-        "electron": "^20.0.3",
+        "electron": "^20.1.0",
         "electron-builder": "23.3.3",
         "electron-devtools-installer": "^3.2.0",
         "electron-notarize": "^1.2.1",
