--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
         ]
     },
     "devDependencies": {
+        "@electron/notarize": "^2.3.2",
         "electron": "^30.0.9",
         "electron-builder": "24.13.3",
         "electron-devtools-installer": "^3.2.0",
-        "electron-notarize": "^1.2.2",
         "foreman": "^3.0.1"
     },
     "build": {
